# test-flutter-rust-bridge

./: .gitignore  Cargo.toml  Makefile  README.md
dart/: pubspec.yaml
rust/: Cargo.toml
rust/examples/: kira.rs
rust/src/: api.rs
src/: lib.rs
