[package]
name = "test-flutter-rust-bridge"
version = "0.1.0"
edition = "2021"
include = ["assets"]

[lib]
crate-type = ["cdylib", "lib"]

[[bin]]
path = "src/main.rs"
name = "experiment"

[dependencies]
anyhow = "1"
flutter_rust_bridge = "1.11.0"
kira = "0.6.0-beta.0"
kira-cpal = "0.1.0-beta.0"
kira-loaders = "0.1.0-beta.0"
lazy_static = "1.4.0"

[dev-dependencies]
tokio = { version = "1", features = ["full"] }
